--- a/ItBolt.WPF/Views/AddRaktarView.xaml
+++ b/ItBolt.WPF/Views/AddRaktarView.xaml
@@ -5,61 +5,85 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ItBolt.WPF.Views" 
              xmlns:viewmodels="clr-namespace:ItBolt.WPF.ViewModels" 
+             xmlns:v="clr-namespace:ItBolt.WPF.Validators"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="Transparent">
-    <Grid>
+    <ScrollViewer HorizontalScrollBarVisibility="Auto">
+        <Grid  Margin="30" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Label FontSize="20" HorizontalAlignment="Center" Content=" Új raktár hozzáadása" Grid.Row="0"  Margin="0,0,30,30"/>
 
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="200" />
-        </Grid.ColumnDefinitions>
-        <Label FontSize="20" HorizontalAlignment="Center" Content=" Új raktár hozzáadása" Grid.Row="0" />
+            <Label Content="Raktár neve: " Grid.Row="1" Grid.Column="0" Margin="50,5,0,0" />
+            <TextBox Grid.Row="1" Grid.Column="1" x:Name="txtRaktarNeve" Margin="0,0,0,25" Padding="5,3,5,0" Height="25" MaxLength="50">
+                <TextBox.Text>
+                    <Binding Path="SelectedRaktar.raktar_neve"  UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True" >
+                        <Binding.ValidationRules>
+                            <v:RaktarValidator/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            
+            <Label Content="Raktár címe: " Grid.Row="2" Grid.Column="0" Margin="50,5,0,0" />
+            <TextBox Grid.Row="2" Grid.Column="1" x:Name="txtRaktarHely" Margin="0,0,0,25" Padding="5,3,5,0" Height="25" MaxLength="50">
+                <TextBox.Text>
+                    <Binding Path="SelectedRaktar.raktar_helye"  UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True" >
+                        <Binding.ValidationRules>
+                            <v:RaktarValidator/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            
+            <Label Content="Raktár bérlési ideje: " Grid.Row="3" Grid.Column="0" Margin="50,5,0,0" />
+            <DatePicker Grid.Row="3" Grid.Column="1" Margin="0,0,0,25" Padding="5,3,5,0" Height="25" 
+                    SelectedDate="{Binding Path=SelectedRaktar.Berlesi_ido, StringFormat='yyyy-MM-dd'}"/>
 
+            <Grid Grid.Row="0" Grid.Column="2" Width="400">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Button Content="Mentés" Grid.Row="0" Grid.Column="0"
+                Command="{Binding SaveCmdAsync}" CommandParameter="{Binding SelectedRaktar}" Height="30" Width="100">
 
-        <Label Content="Raktár neve: " Grid.Row="1" Grid.Column="0" />
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="txtRaktarNeve">
-            <TextBox.Text>
-                <Binding Path="SelectedRaktar.raktar_neve"  UpdateSourceTrigger="PropertyChanged"  />
-            </TextBox.Text>
-        </TextBox>
-        <Label Content="Raktár címe: " Grid.Row="2" Grid.Column="0"/>
-        <TextBox Grid.Row="2" Grid.Column="1" x:Name="txtRaktarHely">
-            <TextBox.Text>
-                <Binding Path="SelectedRaktar.raktar_helye"  UpdateSourceTrigger="PropertyChanged"  />
-            </TextBox.Text>
-        </TextBox>
-        <Label Content="Raktár bérlési ideje: " Grid.Row="3" Grid.Column="0" />
-        <TextBox Grid.Row="3" Grid.Column="1" x:Name="txtRaktarBerles">
-            <TextBox.Text>
-                <Binding Path="SelectedRaktar.Berlesi_ido"  UpdateSourceTrigger="PropertyChanged" />
-            </TextBox.Text>
-        </TextBox>
-
-        <Button Content="Új" Grid.Row="5" Command="{Binding NewCmd}" Margin="118,58,-18,-54" RenderTransformOrigin="0.509,0.577" Grid.Column="1"/>
-        <Button Content="Mentés" Grid.Row="5" Command="{Binding SaveCmdAsync}" CommandParameter="{Binding SelectedRaktar}" Margin="82,58,0,-54">
-            <Button.Style>
-                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
-                    <Setter Property="IsEnabled" Value="True" />
-                    <Style.Triggers>
-                        <MultiDataTrigger>
-                            <MultiDataTrigger.Conditions>
-                                <Condition Binding="{Binding ElementName=txt_BoltNev, Path=(Validation.HasError)}" Value="false" />
-                            </MultiDataTrigger.Conditions>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}" >
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Text.Length, ElementName=txtRaktarNeve}"
+                                     Value="0">
+                                    <Setter Property="IsEnabled" Value="false"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Text.Length, ElementName=txtRaktarHely}"
+                                     Value="0">
+                                    <Setter Property="IsEnabled" Value="false"/>
+                                </DataTrigger>
+                            </Style.Triggers>
                             <Setter Property="IsEnabled" Value="true" />
-                        </MultiDataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Button.Style>
-        </Button>
-        <Button Content="Törlés" Grid.Column="1" Grid.Row="5" Command="{Binding DeleteCmdAsync}" CommandParameter="{Binding SelectedRaktar}" Margin="409,58,-309,-54"/>
-    </Grid>
+                        </Style>
+                    </Button.Style>
+                </Button>
+                <Button Content="Nulláz" Grid.Row="0" Grid.Column="1" Height="30" Width="100" Command="{Binding NewCmd}" />
+            </Grid>
+
+            <Label Grid.Column="2" Content="{Binding ShowUploadResult}" HorizontalAlignment="Left" MaxWidth="100"  Visibility="{Binding ShowUploadResultVis}" FontWeight="Bold" Foreground="Green"/>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
